ext/xrb/markup.c

#line 1 "markup.rl"

#include "markup.h"


#line 8 "markup.c"
static const int XRB_markup_parser_start = 48;
static const int XRB_markup_parser_first_final = 48;
static const int XRB_markup_parser_error = 0;

static const int XRB_markup_parser_en_parse_entity = 42;
static const int XRB_markup_parser_en_main = 48;


#line 195 "markup.rl"


VALUE XRB_Native_parse_markup(VALUE self, VALUE buffer, VALUE delegate, VALUE entities) {
	VALUE string = rb_funcall(buffer, id_read, 0);
	
	rb_encoding *encoding = rb_enc_get(string);
	
	VALUE pcdata = Qnil;
	
	VALUE empty_string = rb_obj_freeze(rb_enc_str_new(0, 0, encoding));
	
	const char *s, *p, *pe, *eof;
	unsigned long cs, top = 0, stack[2] = {0};
	unsigned long codepoint = 0;
	
	XRB_Token identifier = {0}, cdata = {0}, characters = {0}, entity = {0}, doctype = {0}, comment = {0}, instruction = {0};
	unsigned self_closing = 0, has_value = 0, has_entities = 0;
	
	s = p = RSTRING_PTR(string);
	eof = pe = p + RSTRING_LEN(string);
	
	
#line 40 "markup.c"
	{
	cs = XRB_markup_parser_start;
	top = 0;
	}

#line 46 "markup.c"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 48: goto st48;
		case 49: goto st49;
		case 50: goto st50;
		case 1: goto st1;
		case 2: goto st2;
		case 0: goto st0;
		case 3: goto st3;
		case 4: goto st4;
		case 5: goto st5;
		case 51: goto st51;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 15: goto st15;
		case 16: goto st16;
		case 17: goto st17;
		case 18: goto st18;
		case 19: goto st19;
		case 52: goto st52;
		case 20: goto st20;
		case 21: goto st21;
		case 22: goto st22;
		case 23: goto st23;
		case 24: goto st24;
		case 25: goto st25;
		case 26: goto st26;
		case 53: goto st53;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 34: goto st34;
		case 35: goto st35;
		case 54: goto st54;
		case 36: goto st36;
		case 37: goto st37;
		case 55: goto st55;
		case 38: goto st38;
		case 39: goto st39;
		case 40: goto st40;
		case 41: goto st41;
		case 56: goto st56;
		case 42: goto st42;
		case 43: goto st43;
		case 44: goto st44;
		case 57: goto st57;
		case 45: goto st45;
		case 46: goto st46;
		case 47: goto st47;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 38: goto tr88;
		case 60: goto tr89;
	}
	goto tr87;
tr93:
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr87:
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr96:
#line 163 "markup.rl"
	{
		rb_funcall(delegate, id_open_tag_end, 1, self_closing == 1 ? Qtrue : Qfalse);
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr99:
#line 97 "markup.rl"
	{
		comment.end = p;
		
		rb_funcall(delegate, id_comment, 1, XRB_Token_string(comment, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr102:
#line 83 "markup.rl"
	{
		doctype.end = p;
		
		rb_funcall(delegate, id_doctype, 1, XRB_Token_string(doctype, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr105:
#line 182 "markup.rl"
	{
		cdata.end = p;
		
		rb_funcall(delegate, id_cdata, 1, XRB_Token_string(cdata, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr108:
#line 170 "markup.rl"
	{
		rb_funcall(delegate, id_close_tag, 2, XRB_Token_string(identifier, encoding), ULONG2NUM(identifier.begin-s));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
tr111:
#line 117 "markup.rl"
	{
		instruction.end = p;
		
		rb_funcall(delegate, id_instruction, 1, XRB_Token_string(instruction, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 269 "markup.c"
	switch( (*p) ) {
		case 38: goto tr91;
		case 60: goto tr92;
	}
	goto st49;
tr91:
#line 35 "markup.rl"
	{
		characters.end = p;
		
		XRB_append_token(&pcdata, encoding, characters);
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr94:
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr88:
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr97:
#line 163 "markup.rl"
	{
		rb_funcall(delegate, id_open_tag_end, 1, self_closing == 1 ? Qtrue : Qfalse);
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr100:
#line 97 "markup.rl"
	{
		comment.end = p;
		
		rb_funcall(delegate, id_comment, 1, XRB_Token_string(comment, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr103:
#line 83 "markup.rl"
	{
		doctype.end = p;
		
		rb_funcall(delegate, id_doctype, 1, XRB_Token_string(doctype, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr106:
#line 182 "markup.rl"
	{
		cdata.end = p;
		
		rb_funcall(delegate, id_cdata, 1, XRB_Token_string(cdata, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr109:
#line 170 "markup.rl"
	{
		rb_funcall(delegate, id_close_tag, 2, XRB_Token_string(identifier, encoding), ULONG2NUM(identifier.begin-s));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
tr112:
#line 117 "markup.rl"
	{
		instruction.end = p;
		
		rb_funcall(delegate, id_instruction, 1, XRB_Token_string(instruction, encoding));
	}
#line 24 "markup.rl"
	{
	}
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 50;goto st42;}}
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 409 "markup.c"
	switch( (*p) ) {
		case 38: goto tr94;
		case 60: goto tr95;
	}
	goto tr93;
tr89:
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr92:
#line 35 "markup.rl"
	{
		characters.end = p;
		
		XRB_append_token(&pcdata, encoding, characters);
	}
#line 21 "markup.rl"
	{
	}
#line 27 "markup.rl"
	{
		rb_funcall(delegate, id_text, 1, XRB_markup_safe(pcdata, has_entities));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr95:
#line 21 "markup.rl"
	{
	}
#line 27 "markup.rl"
	{
		rb_funcall(delegate, id_text, 1, XRB_markup_safe(pcdata, has_entities));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr98:
#line 163 "markup.rl"
	{
		rb_funcall(delegate, id_open_tag_end, 1, self_closing == 1 ? Qtrue : Qfalse);
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr101:
#line 97 "markup.rl"
	{
		comment.end = p;
		
		rb_funcall(delegate, id_comment, 1, XRB_Token_string(comment, encoding));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr104:
#line 83 "markup.rl"
	{
		doctype.end = p;
		
		rb_funcall(delegate, id_doctype, 1, XRB_Token_string(doctype, encoding));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr107:
#line 182 "markup.rl"
	{
		cdata.end = p;
		
		rb_funcall(delegate, id_cdata, 1, XRB_Token_string(cdata, encoding));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr110:
#line 170 "markup.rl"
	{
		rb_funcall(delegate, id_close_tag, 2, XRB_Token_string(identifier, encoding), ULONG2NUM(identifier.begin-s));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr113:
#line 117 "markup.rl"
	{
		instruction.end = p;
		
		rb_funcall(delegate, id_instruction, 1, XRB_Token_string(instruction, encoding));
	}
#line 134 "markup.rl"
	{
	}
#line 167 "markup.rl"
	{
	}
#line 107 "markup.rl"
	{
		instruction.begin = p;
	}
#line 93 "markup.rl"
	{
		comment.begin = p;
	}
#line 79 "markup.rl"
	{
		doctype.begin = p;
	}
#line 178 "markup.rl"
	{
		cdata.begin = p;
	}
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 687 "markup.c"
	switch( (*p) ) {
		case 33: goto st15;
		case 47: goto st36;
		case 63: goto st38;
		case 96: goto tr1;
	}
	if ( (*p) < 59 ) {
		if ( 0 <= (*p) && (*p) <= 44 )
			goto tr1;
	} else if ( (*p) > 64 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else if ( (*p) >= 91 )
			goto tr1;
	} else
		goto tr1;
	goto tr0;
tr0:
#line 8 "markup.rl"
	{
		identifier.begin = p;
	}
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 716 "markup.c"
	switch( (*p) ) {
		case 32: goto tr6;
		case 47: goto tr7;
		case 62: goto tr8;
		case 96: goto tr1;
	}
	if ( (*p) < 14 ) {
		if ( (*p) > 8 ) {
			if ( 9 <= (*p) && (*p) <= 13 )
				goto tr6;
		} else if ( (*p) >= 0 )
			goto tr1;
	} else if ( (*p) > 44 ) {
		if ( (*p) < 91 ) {
			if ( 59 <= (*p) && (*p) <= 64 )
				goto tr1;
		} else if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto st2;
tr1:
#line 174 "markup.rl"
	{
		XRB_raise_error("could not parse tag", buffer, p-s);
	}
	goto st0;
tr69:
#line 123 "markup.rl"
	{
		XRB_raise_error("could not parse instruction", buffer, p-s);
	}
	goto st0;
tr75:
#line 41 "markup.rl"
	{
		XRB_raise_error("could not parse entity", buffer, p-s);
	}
	goto st0;
#line 759 "markup.c"
st0:
cs = 0;
	goto _out;
tr6:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
#line 127 "markup.rl"
	{
		// Reset self-closing state - we don't know yet.
		self_closing = 0;
		
		rb_funcall(delegate, id_open_tag_begin, 2, XRB_Token_string(identifier, encoding), ULONG2NUM(identifier.begin-s));
	}
	goto st3;
tr14:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
	goto st3;
tr26:
#line 145 "markup.rl"
	{
		has_value = 1;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
	goto st3;
tr32:
#line 149 "markup.rl"
	{
		has_value = 2;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 828 "markup.c"
	switch( (*p) ) {
		case 32: goto st3;
		case 47: goto tr11;
		case 62: goto st51;
		case 96: goto tr1;
	}
	if ( (*p) < 14 ) {
		if ( (*p) > 8 ) {
			if ( 9 <= (*p) && (*p) <= 13 )
				goto st3;
		} else if ( (*p) >= 0 )
			goto tr1;
	} else if ( (*p) > 44 ) {
		if ( (*p) < 91 ) {
			if ( 59 <= (*p) && (*p) <= 64 )
				goto tr1;
		} else if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr9;
tr9:
#line 141 "markup.rl"
	{
		has_value = 0;
	}
#line 8 "markup.rl"
	{
		identifier.begin = p;
	}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 867 "markup.c"
	switch( (*p) ) {
		case 32: goto tr14;
		case 47: goto tr15;
		case 61: goto tr16;
		case 62: goto tr17;
		case 96: goto tr1;
	}
	if ( (*p) < 14 ) {
		if ( (*p) > 8 ) {
			if ( 9 <= (*p) && (*p) <= 13 )
				goto tr14;
		} else if ( (*p) >= 0 )
			goto tr1;
	} else if ( (*p) > 44 ) {
		if ( (*p) < 91 ) {
			if ( 59 <= (*p) && (*p) <= 64 )
				goto tr1;
		} else if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto st4;
tr7:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
#line 127 "markup.rl"
	{
		// Reset self-closing state - we don't know yet.
		self_closing = 0;
		
		rb_funcall(delegate, id_open_tag_begin, 2, XRB_Token_string(identifier, encoding), ULONG2NUM(identifier.begin-s));
	}
#line 137 "markup.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr11:
#line 137 "markup.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr15:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
#line 137 "markup.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr27:
#line 145 "markup.rl"
	{
		has_value = 1;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
#line 137 "markup.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr33:
#line 149 "markup.rl"
	{
		has_value = 2;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
#line 137 "markup.rl"
	{
		self_closing = 1;
	}
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 980 "markup.c"
	if ( (*p) == 62 )
		goto st51;
	goto tr1;
tr8:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
#line 127 "markup.rl"
	{
		// Reset self-closing state - we don't know yet.
		self_closing = 0;
		
		rb_funcall(delegate, id_open_tag_begin, 2, XRB_Token_string(identifier, encoding), ULONG2NUM(identifier.begin-s));
	}
	goto st51;
tr17:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
	goto st51;
tr28:
#line 145 "markup.rl"
	{
		has_value = 1;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
	goto st51;
tr34:
#line 149 "markup.rl"
	{
		has_value = 2;
	}
#line 153 "markup.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), XRB_markup_safe(pcdata, has_entities));
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, XRB_Token_string(identifier, encoding), Qtrue);
		}
	}
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 1049 "markup.c"
	switch( (*p) ) {
		case 38: goto tr97;
		case 60: goto tr98;
	}
	goto tr96;
tr16:
#line 12 "markup.rl"
	{
		identifier.end = p;
	}
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 1065 "markup.c"
	switch( (*p) ) {
		case 34: goto st7;
		case 39: goto st12;
	}
	goto tr1;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 34: goto st11;
		case 38: goto tr22;
		case 60: goto tr1;
	}
	goto tr20;
tr20:
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st8;
tr29:
#line 31 "markup.rl"
	{
		characters.begin = p;
	}
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 1102 "markup.c"
	switch( (*p) ) {
		case 34: goto tr24;
		case 38: goto tr25;
		case 60: goto tr1;
	}
	goto st8;
tr24:
#line 35 "markup.rl"
	{
		characters.end = p;
		
		XRB_append_token(&pcdata, encoding, characters);
	}
#line 21 "markup.rl"
	{
	}
	goto st9;
tr30:
#line 21 "markup.rl"
	{
	}
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 1129 "markup.c"
	switch( (*p) ) {
		case 32: goto tr26;
		case 47: goto tr27;
		case 62: goto tr28;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr26;
	goto tr1;
tr22:
#line 16 "markup.rl"
	{
		pcdata = Qnil;
		has_entities = 0;
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 10;goto st42;}}
	goto st10;
tr25:
#line 35 "markup.rl"
	{
		characters.end = p;
		
		XRB_append_token(&pcdata, encoding, characters);
	}
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 10;goto st42;}}
	goto st10;
tr31:
#line 10 "/home/samuel/Documents/ioquatix/xrb/parsers/xrb/entities.rl"
	{{stack[top++] = 10;goto st42;}}
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 1165 "markup.c"
	switch( (*p) ) {
		case 34: goto tr30;
		case 38: goto tr31;
		case 60: goto tr1;
	}
	goto tr29;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 32: goto tr32;
		case 47: goto tr33;
		case 62: goto tr34;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr32;
